Adicionado consulta de livros no index e botoes de compra, detalhes e indisponivel

--- a/site/cabecalho.html
+++ b/site/cabecalho.html
@@ -4,10 +4,10 @@
     <!-- Imagens -->
     <article class="carousel-inner">
         <figure class="carousel-item active">
-            <img src="./assets/images/banner.png" class="d-block w-100" alt="Banner Promocional">
+            <img src="./assets/images/BannerEspreitador" class="d-block w-100" alt="Banner Promocional">
         </figure>
         <figure class="carousel-item">
-            <img src="./assets/images/banner2.png" class="d-block w-100" alt="Banner Promocional 2">
+            <img src="./assets/images/BannerDBride.png" class="d-block w-100" alt="Banner Promocional 2">
         </figure>
 
     </article>
