--- a/site/cabecalho.html
+++ b/site/cabecalho.html
@@ -1,29 +1,39 @@
-<!-- Slides Banners de Promoção -->
-<section id="banners-promocionais" class="carousel slide" data-bs-ride="true" data-ride="carousel">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- Imagens -->
-    <article class="carousel-inner">
-        <figure class="carousel-item active">
-            <img src="./assets/images/BannerEspreitador" class="d-block w-100" alt="Banner Promocional">
-        </figure>
-        <figure class="carousel-item">
-            <img src="./assets/images/BannerDBride.png" class="d-block w-100" alt="Banner Promocional 2">
-        </figure>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    </article>
-
-    <!-- Botão Anterior -->
-    <a class="carousel-control-prev" type="button" href="#banners-promocionais" role="button" data-slide="prev">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="assets/images/BannerEspreitador" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>My Caption Title (1st Image)</h5>
+                <p>The whole caption will only show up if the screen is at least medium size.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="assets/images/banner.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="assets/images/bannerPanico.png" alt="Third slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden"></span>
+        <span class="sr-only">Previous</span>
     </a>
-
-    <!-- Botão Proximo -->
-    <a class="carousel-control-next" type="button" href="#banners-promocionais" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden"></span>
+        <span class="sr-only">Next</span>
     </a>
-</section>
+</div>
 <!-- Fim Slides Banners de Promoção -->
 
 <!-- Banners de Promoção com 6 colunas -->
